--- a/Informe Demográfico/Informe Contexto Demográfico.Rmd
+++ b/Informe Demográfico/Informe Contexto Demográfico.Rmd
@@ -487,43 +487,49 @@ Es claro que tener una esperanza de vida al nacer alta es un buen indicador para
 
 # Desempleo
 
+En los últimos años, Costa Rica ha experimentado una notable disminución en su tasa de desempleo, un indicador que representa el porcentaje de personas en edad laboral que están desempleadas y activamente buscando trabajo dentro de la fuerza laboral. 
+
 ```{r,echo = FALSE}
 Desempleo <- read_excel("Desempleo.xlsx")
 Desempleo$Trimestre <- factor(Desempleo$Trimestre, levels = unique(Desempleo$Trimestre))
 ```
 
 ```{r,echo = FALSE,warning = FALSE}
-ggplot(Desempleo, aes(x = Trimestre, y = `Tasa desempleo`)) +
-  geom_bar(stat = "identity", fill = "cadetblue3", width = 0.7,alpha = 0.7) +
-  geom_text(aes(label = paste0(`Tasa desempleo`, "%")), vjust = -0.5, color = "#2F4F4F") +
+Desempleo_copia <- read_excel("Desempleo - copia.xlsx")
+Desempleo_copia_2 <- read_excel("Desempleo - copia (2).xlsx")
+
+
+Desempleo_copia_2_long <- tidyr::pivot_longer(Desempleo_copia_2, cols = -Año, names_to = "Trimestre", values_to = "Poblacion_Desempleada")
+
+Desempleo_copia_2_long$Poblacion_Desempleada <- Desempleo_copia_2_long$Poblacion_Desempleada / 30000
+
+Desempleo_copia_long <- tidyr::pivot_longer(Desempleo_copia, cols = -Año, names_to = "Trimestre", values_to = "Tasa_Desempleo")
+
+
+ggplot(Desempleo_copia_long, aes(x = factor(Año), y = Tasa_Desempleo, fill = Trimestre)) +
+  geom_bar(stat = "identity", position = "dodge", alpha = 0.7) +
+  geom_text(aes(label = paste0(Tasa_Desempleo, "%")), position = position_dodge(width = 0.9), vjust = -0.5, size = 3, color = "#2F4F4F") +
+  geom_point(data = Desempleo_copia_2_long, aes(x = factor(Año), y = Poblacion_Desempleada, color = Trimestre), size = 3, position = position_dodge(width = 0.9)) +
+  geom_text(data = Desempleo_copia_2_long, aes(label = round(Poblacion_Desempleada * 30000), x = factor(Año), y = Poblacion_Desempleada, color = Trimestre), size = 3, position = position_dodge(width = 0.9), vjust = -1.5) +
+  scale_fill_manual(values = c("I Trimestre" = "#2F4F4F", "II Trimestre" = "cadetblue4", "III Trimestre" = "cadetblue3", "IV Trimestre" = "cadetblue1")) +
+  scale_color_manual(values = c("I Trimestre" = "#2F4F4F", "II Trimestre" = "#528B8B", "III Trimestre" = "#5F9EA0", "IV Trimestre" = "cadetblue3")) +
   labs(title = "Costa Rica. Tasa de desempleo abierta y población desempleada", 
        subtitle = "2022-2023",
-       caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del INEC y BCCR."),
-       x = "Trimestre",
-       y = "Tasa de Desempleo (%)") +
+       caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del INEC y BCCR."), x = "Año", y = "Tasa de desempleo (%)", fill = "Trimestre", color = "Trimestre") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        legend.position = "bottom",
-        plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5),
-        plot.caption = element_text(hjust = 0)) +
-  coord_cartesian(ylim = c(0, 14)) +
-  
-  
-  geom_point(aes(x = Trimestre, y = `Población desempleada`/30000, color = "Población desempleada"), size = 2) +
-  geom_text(data = Desempleo, aes(x = Trimestre, y = `Población desempleada`/30000, label = `Población desempleada`), vjust = -0.5, color = "#528B8B", size = 3) +
-  
-  scale_color_manual(values = c("Población desempleada" = "#2F4F4F")) + 
-  guides(color = guide_legend(title = " ")) 
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 0)
+  )
 ```
 
-Durante el transcurso del año 2022 en Costa Rica, se observó una tendencia descendente en los índices de desempleo a excepción del III Trimestre, acompañada de una disminución en la participación activa en el mercado laboral. De acuerdo con datos proporcionados por el Instituto Nacional de Estadística y Censos (INEC), este período inició con una tasa de desempleo del 13,58%, que descendió gradualmente hasta alcanzar un 11,67% al cierre del año. Aunque el Gobierno ha atribuido esta disminución en la fuerza laboral principalmente a la jubilación, es fundamental considerar otros posibles factores que pudieron influir en esta tendencia.
+Durante el transcurso del año 2022, se observó una tendencia descendiente en los índices de desempleo a excepción del III Trimestre, acompañada de una disminución en la participación activa en el mercado laboral. De acuerdo con datos proporcionados por el Instituto Nacional de Estadística y Censos (INEC), este período inició con una tasa de desempleo del 13,58%, que descendió gradualmente hasta alcanzar un 11,67% al cierre del año.
 
-
-El desempleo en Costa Rica cerró el año 2023 con una tasa del 7,3%, lo que representó una notable disminución de 4,4 puntos porcentuales en comparación con el año anterior, donde se registraba en un 11,67%. Siendo esta la menor tasa de desempleo en 13 años.
+El desempleo en Costa Rica cerró el año 2023 con una tasa del 7,3%, lo que representó una notable disminución de 4,4 puntos porcentuales en comparación con el año anterior, donde se registraba en un 11,67%. Siendo esta la menor tasa de desempleo en 13 años, según el INEC.
 En términos absolutos, el 7,3% de desempleo equivale a aproximadamente 164.000 personas. La disminución en la participación laboral se refleja en una notable caída de 5,9 puntos porcentuales en la tasa de participación.
 
-El informe del INEC también destaca cambios significativos en la distribución de la ocupación por sectores económicos. Se observó una reducción en la construcción, actividades profesionales y administrativas de apoyo, así como en hogares como empleadores. Por otro lado, se registraron aumentos en sectores como la enseñanza, la salud y la administración pública. Estos cambios en la estructura ocupacional pueden tener implicaciones importantes para la economía y el mercado laboral en general.
+El informe del INEC (IV trimestre 2023), también destaca cambios significativos en la distribución de la ocupación por sectores económicos. Se observó una reducción en la construcción, actividades profesionales y administrativas de apoyo, así como en hogares como empleadores. Por otro lado, se registraron aumentos en sectores como la enseñanza, la salud y la administración pública. Estos cambios en la estructura ocupacional pueden tener implicaciones importantes para la economía y el mercado laboral en general.
 
 
 ```{r,echo = FALSE,warning = FALSE}
@@ -556,6 +562,6 @@ ggplot(ocupaDesempleo, aes(x = Trimestre)) +
 ```
 
 Con respecto a otros indicadores adicionales del mercado laboral proporcionados por el INEC, a finales del 2023, se tiene que la tasa de ocupación, que representa el porcentaje de personas empleadas en relación con la población de 15 años o más, se situó en un 50%, mientras que la tasa neta de participación laboral, que abarca tanto a las personas empleadas como a las desempleadas en relación con la misma población, fue del 54,3%. Ambos indicadores experimentaron caídas significativas interanuales de 3,3 y 6,2 puntos porcentuales, respectivamente.
-Según el INEC, esta reducción se vio impulsada por una disminución en la participación de personas en el mercado laboral, especialmente en el sector informal. Es crucial destacar que la disminución en la tasa de desempleo no necesariamente indica una mejora en las oportunidades laborales, sino más bien una menor cantidad de personas buscando activamente empleo.
+Según la ECE (Encuesta Continua de Empleo, IV trimestre 2023), esta reducción se vio impulsada por una disminución en la participación de personas en el mercado laboral, especialmente en el sector informal. Es crucial destacar que la disminución en la tasa de desempleo no necesariamente indica una mejora en las oportunidades laborales, sino más bien una menor cantidad de personas buscando activamente empleo.
 
 # Población económicamente activa
